# ocarina

./: CMakeLists.txt
.github/skills/dev/: SKILL.md
.github/skills/dev/docs/: README.md
cmake/: CopyDllAndPdb.cmake  CopyTargetOutputs.cmake
src/: CMakeLists.txt  main.cpp
src/GUI/: CMakeLists.txt  decl.h  window.cpp  window.h
src/GUI_impl/: CMakeLists.txt
src/GUI_impl/imGui/: glfw_window.cpp  glfw_window.h  sdl_window.cpp  sdl_window.h  widgets.cpp  widgets.h
src/ast/: CMakeLists.txt  ast_node.h  expression.cpp  expression.h  function.cpp  function.h  function_corrector.cpp  function_corrector.h  layout_resolver.cpp  layout_resolver.h  op.h  symbol_name.h  type.cpp  type.h  type_desc.h  type_registry.cpp  type_registry.h  type_system_callbacks.cpp  variable.h
src/backends/: CMakeLists.txt
src/backends/cuda/: ast_to_cuda_source.cpp  ast_to_cuda_source.h  cuda_bindless_array.cpp  cuda_bindless_array.h  cuda_codegen.cpp  cuda_command_visitor.cpp  cuda_compiler.cpp  cuda_device.cpp  cuda_device.h  cuda_mesh.cpp  cuda_shader.cpp  cuda_texture.cpp  cuda_texture.h  ir_to_cuda_source.cpp  ir_to_cuda_source.h  optix_accel.cpp  optix_accel.h  util.h
src/backends/vulkan/: util.h  vulkan_buffer.h  vulkan_descriptorset_writer.cpp  vulkan_device.cpp  vulkan_device.h  vulkan_index_buffer.cpp  vulkan_index_buffer.h  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_rendertarget.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_vertex_buffer.cpp
src/core/: CMakeLists.txt  concepts.h  dynamic_buffer_layout_codec.h  hash.h  header.h  host_byte_buffer.h  precision_policy.cpp  precision_policy.h  stl.cpp  stl.h  type.cpp  type.h  type_desc.h  type_registry.cpp  type_registry.h
src/core/concurrency/: thread_pool.cpp  thread_pool.h
src/core/dynamic_buffer/: dynamic_buffer_field_access.h  dynamic_buffer_gpu_bridge.h  dynamic_buffer_layout_codec.h  dynamic_buffer_layout_common.h  dynamic_buffer_layout_plan.cpp  dynamic_buffer_layout_plan.h  host_byte_buffer.h  host_dynamic_buffer.cpp  host_dynamic_buffer.h
src/core/image/: image.cpp  image.h
src/core/runtime/: dynamic_module.cpp  platform.cpp
src/core/type_system/: precision_policy.cpp  precision_policy.h  type.cpp  type_desc.h  type_registry.cpp  type_registry.h
src/core/util/: element_trait.h  hash.cpp  hash.h  logging.cpp  logging.h  string_util.h  util.h
src/dsl/: CMakeLists.txt  builtin.h  dsl.h  dynamic_array.h  encodable.h  env.h  expr.h  func.h  polymorphic.h  printer.cpp  printer.h  ref.h  ref_func.h  registrable.h  rtx.h  soa.h  struct.h  type_trait.h  var.h
src/dsl/api/: builtin.h  func.h  operators.h  stmt_builder.h
src/dsl/core/: expr.h  ref.h  ref.inl
src/dsl/data/: dynamic_array.h  encodable.h  registrable.h
src/dsl/diagnostics/: debugger.h  env.cpp  printer.cpp  printer.h
src/dsl/tensor/: common.h  conv.h  gemm.h  gemm_runtime.h  pool.h  tensor.h
src/dsl/types/: polymorphic.h  rtx.h  soa.h  struct.h
src/ext/: CMakeLists.txt
src/ext/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
src/framework/: CMakeLists.txt  camera.cpp  material.cpp  primitive.cpp  primitive.h  renderer.cpp  renderer.h
src/generator/: CMakeLists.txt  ast_to_cpp_source.cpp  ast_to_cpp_source.h  ast_to_ir.cpp  ast_to_ir.h  codegen.cpp  codegen.h  cpp_codegen.cpp  cpp_codegen.h  ir_module.h  source_emitter.cpp  source_emitter.h  source_emitter_base.cpp  source_emitter_base.h
src/math/: CMakeLists.txt  base.h  basic_traits.h  basic_types.h  box.h  common_lib.inl.h  geometry.h  half.cpp  half.h  math_lib_template.py  matrix_types.h  real.h  scalar_func.h  transform.h  vector_types.h
src/pyexporter/: CMakeLists.txt  ocapi.h
src/pyexporter/math/: export_math.cpp  export_vector_func.h
src/pyexporter/rhi/: export_commands.cpp  export_device.cpp
src/pyexporter/utils/: export_window.cpp
src/rhi/: CMakeLists.txt  command.cpp  command.h  command_queue.cpp  command_queue.h  common.h  context.cpp  context.h  device.cpp  device.h  graphics_descriptions.h  index_buffer.cpp  index_buffer.h  renderpass.cpp  rendertarget.h  stats.cpp  stats.h  vertex_buffer.cpp  vertex_buffer.h  window_types.h
src/rhi/resources/: bindless_array.cpp  bindless_array.h  buffer.h  byte_buffer.h  dynamic_buffer.h  list.h  managed.h  resource.h  shader.cpp  shader.h  stream.cpp  stream.h  texture.cpp  texture.h  texture_sampler.h
src/rhi/rtx/: accel.cpp  accel.h  mesh.h
src/rhi/tensor/: common.h  conv_desc.h  gemm_desc.h  gemm_registry.cpp  gemm_registry.h  pool_desc.h  tensor.h  tensor_view.h
src/tests/: CMakeLists.txt  test_accel.cpp  test_accel_update.cpp  test_ast_to_cuda_source_resolved_types.cpp  test_bindless_array.cpp  test_buffer_access_modes.cpp  test_bytebuffer_access_modes.cpp  test_callable.cpp  test_codegen_resolved_types.cpp  test_counted_buffer.cpp  test_doc.cpp  test_dynamic_buffer.cpp  test_dynamic_buffer_gpu_bridge.cpp  test_dynamic_buffer_layout_codec.cpp  test_function_corrector.cpp  test_half.cpp  test_host_byte_buffer.cpp  test_host_dynamic_buffer.cpp  test_image3.cpp  test_image_io.cpp  test_kernel.cpp  test_launch_latency.cpp  test_matrix_inverse.cpp  test_parse_type.cpp  test_precision_caps.cpp  test_printer_bindless_buffer_debug.cpp  test_printer_bytebuffer_debug.cpp  test_raygenkernel.cpp  test_shader_parameter_policy.cpp  test_soa.cpp  test_swizzle.cpp  test_texture_access_modes.cpp  test_texture_readwrite.cpp  test_trait.cpp  test_vulkan_bindless.cpp  test_vulkan_texture.cpp
src/tests/codegen/: test_ast_to_cuda_source_resolved_types.cpp  test_shader_argument_pack.cpp  test_tensor_gemm_codegen.cpp
src/tests/core/: test_function_corrector.cpp  test_half.cpp  test_parse_type.cpp  test_precision_caps.cpp
src/tests/debug/: test_printer.cpp
src/tests/resources/: test_bindless_array.cpp  test_dynamic_buffer.cpp  test_dynamic_buffer_layout_codec.cpp  test_host_byte_buffer.cpp  test_texture_access_modes.cpp  test_texture_readwrite.cpp
src/tests/runtime/: test_atomic.cpp  test_launch_latency.cpp  test_tensor_gemm.cpp
tools/: run_all_tests.bat
(+15 files in other folders)
